next iteration of the data source framework, fixed up the readme a bit